# openconvert

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/openconvert-app/: Cargo.toml
crates/openconvert-app/src/: app.rs  editor.rs  main.rs  messages.rs  native_dialog.rs  player.rs  preview.rs  preview_player.rs  theme.rs  timeline_geo.rs
crates/openconvert-app/src/ui/: convert_view.rs  edit_view.rs  export_bar.rs  export_dialog.rs  mod.rs  preview_view.rs  shortcuts.rs  timeline_view.rs  topbar.rs
crates/openconvert-core/: Cargo.toml
crates/openconvert-core/src/: lib.rs  project.rs  resource.rs  timeline.rs
crates/openconvert-media/: Cargo.toml
crates/openconvert-media/src/: audio.rs  composite.rs  decode.rs  export.rs  lib.rs  performance.rs  probe.rs  render.rs
docs/: decode-optimization-diff.md
packaging/: README.md
packaging/arch/: PKGBUILD
packaging/linux/: openconvert.desktop
scripts/: build-static-codecs.sh
